revision draft finished

--- a/paper/noisy_kids.tex
+++ b/paper/noisy_kids.tex
@@ -17,7 +17,7 @@
 
 
 \abstract{
-Because linguistic communication is inherently noisy and uncertain, adult language comprehenders integrate bottom-up cues from speech perception with top-down expectations about what speakers are likely to say. Further, in line with the predictions of ideal observer models, comprehenders flexibly adapt how much they rely on these two kinds of cues in proportion to their changing reliability. Do children also show evidence of flexible, expectation-based language comprehension? We presented preschoolers with ambiguous utterances that afforded two different interpretations, depending on whether they privileged perceptual input or top-down expectations. Across three experiments, we manipulated the reliability of both their perceptual input and their expectations about the speaker's intended meaning. As predicted by noisy channel models of speech processing, 4- and 5-year-old---but not younger---children flexibly adjusted their interpretations as cues changed in reliability.}
+Because linguistic communication is inherently noisy and uncertain, adult language comprehenders integrate bottom-up cues from speech perception with top-down expectations about what speakers are likely to say. Further, in line with the predictions of ideal observer models, comprehenders flexibly adapt how much they rely on these two kinds of cues in proportion to their changing reliability. Do children also show evidence of flexible, expectation-based language comprehension? We presented preschoolers with ambiguous utterances that afforded two different interpretations, depending on whether they privileged perceptual input or top-down expectations. Across three experiments, we manipulated the reliability of both their perceptual input and their expectations about the speaker's intended meaning. As predicted by noisy channel models of speech processing, 4- and 5-year-old---but perhaps not younger---children flexibly adjusted their interpretations as cues changed in reliability.}
 
 \keywords{Language processing, noisy channel, cognitive development}
 
@@ -92,7 +92,7 @@ For all participants, the experiment began with a short introduction to Katie, t
 
 \subsection{Results}
 
-In order to validate our manipulation, we first analyze the effect of the speaker on Exposure trials. If participants were attending to the speaker's requests during Exposure trials, those in the Plausible condition should have been more likely to choose the plausible referent (e.g. kittens), and those in the Implausible condition should have been more likely to choose the implausible referent (e.g. hammers). We tested this prediction formally by fitting a mixed-effects logistic regression predicting choice on Exposure trials separately for children and adults. In this and all other models we report, conditions were dummy coded, and Implausible was treated as the reference category. Random effects for all models were always maximal--random intercepts for subjects and items ($(1|subj) + (1|word)$). As predicted, both children and adults selected the plausible referent more often in the Plausible condition ($\beta_{child} = 4.54$,  $z = 8.28$, $p <.001$, $d = 5.56$; $\beta_{adult} = 9.41$,  $z = 5.83$, $p <.001$, $d = 24.3$). We then fit a model to all of the data, asking whether adults and children were differentially affected by speaker condition. We found significant effects of condition, age group, and their interaction ($\beta_{Plausible} = 9.52$,  $z = 7.87$, $p <.001$,  $\beta_{child} = 1.96$,  $z = 3.33$, $p <.001$; $\beta_{child\: \cdot \: Plausible} = -5$,  $z = -4.12$, $p <.001$). Thus, both children and adults were sensitive to the speaker manipulation during Exposure trials, selecting the appropriate referent whether or not the request was implausible, although adults selected the correct referent more often in both conditions.
+In order to validate our manipulation, we first analyze the effect of the speaker on Exposure trials. If participants were attending to the speaker's requests during Exposure trials, those in the Plausible condition should have been more likely to choose the plausible referent (e.g. kittens), and those in the Implausible condition should have been more likely to choose the implausible referent (e.g. hammers). We tested this prediction formally by fitting a mixed-effects logistic regression predicting choice on Exposure trials separately for children and adults ($Exposure \sim condition + (1|subj) + (1|item)$). In this and all other models we report, conditions were dummy coded, and Implausible was treated as the reference category. Random effects for all models were always maximal--random intercepts for subjects and items. As predicted, both children and adults selected the plausible referent more often in the Plausible condition ($\beta_{child} = 4.54$,  $z = 8.28$, $p <.001$, $d = 5.56$; $\beta_{adult} = 9.41$,  $z = 5.83$, $p <.001$, $d = 24.3$). We then fit a model to all of the data, asking whether adults and children were differentially affected by speaker condition ($Exposure \sim condition \cdot age + (1|subj) + (1|item)$). We found significant effects of condition, age group, and their interaction ($\beta_{Plausible} = 9.52$,  $z = 7.87$, $p <.001$,  $\beta_{child} = 1.96$,  $z = 3.33$, $p <.001$; $\beta_{child\: \cdot \: Plausible} = -5$,  $z = -4.12$, $p <.001$). Thus, both children and adults were sensitive to the speaker manipulation during Exposure trials, selecting the appropriate referent whether or not the request was implausible, although adults selected the correct referent more often in both conditions.
 
 \begin{figure}[tb]
 \centering
@@ -101,9 +101,9 @@ In order to validate our manipulation, we first analyze the effect of the speake
    \label{fig:exp1_results}
 \end{figure}
 
-Did this exposure to a Plausible vs. Implausible speaker change participants' expectations on the ambiguous Test trials? Figure~\ref{fig:exp1_results} shows the proportion of both children and adults who selected the plausible referent at test in both conditions. As predicted, both groups were sensitive to the manipulation, selecting the plausible referent more often in the Plausible Speaker condition ($\beta_{child} = 1.10$, $z = 3.53$, $p <.001$, $d = 1.10$; $\beta_{adult} = 3.11$, $z = 3.56$, $p <.001$, $d = 1.09$). While children were overall more likely to pick the plausible referent in both conditions, the effect size of the difference between conditions was nearly identical in adults and children, indicating equal adaptation to the Plausible vs. Implausible speaker. To confirm these findings formally, we again fit a mixed-effects regression predicting choice on Test trials from group (child vs. adult), condition (Plausible vs. Implausible Speaker), and their interaction. Both of the main effects were significant, but the interaction was not ($\beta_{child} = 1.96$,  $z = 3.33$, $p <.001$, $\beta_{Plausible} = 2.33$,  $z = 4.40$, $p <.001$,  $\beta_{child \: \cdot \: Plausible} = -1.01$,  $z = -1.53$, $p = .13$). Thus, children and adults, to the same degree, were more likely to select the plausible referent on ambiguous Test trials when the speaker had previously referred to plausible referent on unambiguous Exposure trials.
+Did this exposure to a Plausible vs. Implausible speaker change participants' expectations on the ambiguous Test trials? Figure~\ref{fig:exp1_results} shows the proportion of both children and adults who selected the plausible referent at test in both conditions. As predicted, both groups were sensitive to the manipulation, selecting the plausible referent more often in the Plausible Speaker condition ($Test \sim condition + (1|subj) + (1|item)$; $\beta_{child} = 1.10$, $z = 3.53$, $p <.001$, $d = 1.10$; $\beta_{adult} = 3.11$, $z = 3.56$, $p <.001$, $d = 1.09$). While children were overall more likely to pick the plausible referent in both conditions, the effect size of the difference between conditions was nearly identical in adults and children, indicating equal adaptation to the Plausible vs. Implausible speaker. To confirm these findings formally, we again fit a mixed-effects regression predicting choice on Test trials from group (child vs. adult), condition (Plausible vs. Implausible Speaker), and their interaction ($Test \sim age \cdot condition + (1|subj) + (1|item)$). Both of the main effects were significant, but the interaction was not ($\beta_{child} = 1.96$,  $z = 3.33$, $p <.001$, $\beta_{Plausible} = 2.33$,  $z = 4.40$, $p <.001$,  $\beta_{child \: \cdot \: Plausible} = -1.01$,  $z = -1.53$, $p = .13$). Thus, children and adults, to the same degree, were more likely to select the plausible referent on ambiguous Test trials when the speaker had previously referred to plausible referent on unambiguous Exposure trials.
 
-When children and adults were exposed to a speaker who was likely to produce semantically implausible utterances (e.g. ``my cat has three little hammers''), they were more likely to interpret ambiguous utterances literally instead of error-correcting to a more semantically plausible alternative. Intriguingly, the size of this adaptation was nearly identical in both groups, suggesting that 4- and 5-year-olds are already adapting as rapidly as adults. Children were, however, more likely overall to pick the plausible referent during ambiguous test trials, suggesting that they generally rely more on their expectations than do adults. This finding is consonant with other evidence showing significantly more noise in children's perceptual systems \cite{neuman1983}.
+When children and adults were exposed to a speaker who was likely to produce semantically implausible utterances (e.g. ``my cat has three little hammers''), they were more likely to interpret ambiguous utterances literally instead of error-correcting to a more semantically plausible alternative. Intriguingly, the size of this adaptation was nearly identical in both groups, suggesting that 4- and 5-year-olds are already adapting as rapidly as adults. Children were, however, more likely overall to pick the plausible referent during ambiguous test trials, suggesting that they generally rely more on their expectations than do adults. This finding is consonant with other evidence showing significantly more noise in children's perceptual systems \cite{neuman1983}, but in contrast cases in which children appear to over-rely on bottom-up cues \cite{snedeker2004, trueswell1999}. These results suggest that children's relative reliance on bottom-up or top-down cues may not be fixed, but rather an adaptive function of the reliability of their processing of different kinds of cues. We explore this question further in Experiment 3 after we first replicate Experiment 1.  
 
 \section{Experiment 2}
 
@@ -138,9 +138,11 @@ Experiment 2 was an exact replication of Experiment 1.
 
 \subsection{Results}
 
-As in Experiment 1, we first establish that children understood the task, and responded appropriately to the  the Plausible and Implausible speakers on Exposure trials. We began by fitting a mixed-effects logistic regression for each age group separately. In all three age groups, children were more likely to select the plausible referent when asked for it by the Plausible speaker ($\beta_{3-years} = 1.43$, $z = 3.71$, $p < .001$, $d = 1.20$; $\beta_{4-years} = 3.10$, $z = 6.63$, $p < .001$, $d = 2.66$; $\beta_{5-years} = 5.55$, $z = 7.39$, $p < .001$, $d = 8.27$). We then asked whether children's behavior changed over development. A mixed-effects model fit to all of the children's data showed main effects of both age ($\beta_{age} = -.74$, $z = -4.18$, $p < .001$) and Speaker Plausibility ($\beta_{Plausible} = -6.16$, $z = 1.81$, $p < .001$), and also an interaction between the two ($\beta_{age \: \cdot \: Plausible} = 2.12$, $z = 7.61$, $p < .001$). Thus, older children showed a greater sensitivity to the speaker on the unambiguous Exposure trials.
+Because genders were imbalanced across conditions, we performed all analyses with gender as a fixed effect. In no case did this gender effect reach significance, nor did it affect any of the other inferences. We thus do not report it here, but interested readers can see all of these models at our github.io page: {\small \tt{dyurovsky.github.io/noisy-kids/}}. 
 
-We next turned to the Test trials. When we examined each age group separately we found that as in Experiment 1, both 4- and 5-year olds leveraged their previous experience with the speaker when interpreting the ambiguous test utterances (Figure~\ref{fig:exp2_results}). However, 3-year-olds did not ($\beta_{3-years} = .06$, $z = .21$, $p  = .83$, $d = .06$; $\beta_{4-years} = 1.01$, $z = 2.87$, $p < .01$, $d = .82$; $\beta_{5-years} = 1.35$, $z = 3.96$, $p < .001$, $d = 1.24$). A mixed-effects regression fit to all of the data confirmed this developmental change in sensitivity, finding a significant main effect of age ($\beta_{age} = -.43$, $z = -2.75$, $p < .01$), a marginal effect of Plausible Speaker ($\beta_{Plausible} = -1.71$, $z = -1.82$, $p = .07$), and a significant interaction between the two ($\beta_{age \: \cdot \: Plausible} = .54$, $z = 2.58$, $p = .01$). In line with previous work, these results show that 3-year-old children have trouble using top-down speaker expectations when processing ambiguous utterances \cite{kidd2005}. However, children appear to improve significantly over the next two years \cite{rabagliati2013}.
+As in Experiment 1, we first establish that children understood the task, and responded appropriately to the  the Plausible and Implausible speakers on Exposure trials. We began by fitting a mixed-effects logistic regression for each age group separately ($Exposure \sim condition + (1|subj) + (1|item)$). In all three age groups, children were more likely to select the plausible referent when asked for it by the Plausible speaker ($\beta_{3-years} = 1.43$, $z = 3.71$, $p < .001$, $d = 1.20$; $\beta_{4-years} = 3.10$, $z = 6.63$, $p < .001$, $d = 2.66$; $\beta_{5-years} = 5.55$, $z = 7.39$, $p < .001$, $d = 8.27$). We then asked whether children's behavior changed over development ($Exposure \sim age \cdot condition + (1|subj) + (1|item)$). A mixed-effects model fit to all of the children's data showed main effects of both age ($\beta_{age} = -.74$, $z = -4.18$, $p < .001$) and Speaker Plausibility ($\beta_{Plausible} = -6.16$, $z = 1.81$, $p < .001$), and also an interaction between the two ($\beta_{age \: \cdot \: Plausible} = 2.12$, $z = 7.61$, $p < .001$). Thus, older children showed a greater sensitivity to the speaker on the unambiguous Exposure trials.
+
+We next turned to the Test trials. When we examined each age group separately we found that as in Experiment 1, both 4- and 5-year olds leveraged their previous experience with the speaker when interpreting the ambiguous test utterances (Figure~\ref{fig:exp2_results}). However, 3-year-olds did not ($Test \sim condition + (1|subj) + (1|item)$; $\beta_{3-years} = .06$, $z = .21$, $p  = .83$, $d = .06$; $\beta_{4-years} = 1.01$, $z = 2.87$, $p < .01$, $d = .82$; $\beta_{5-years} = 1.35$, $z = 3.96$, $p < .001$, $d = 1.24$). A mixed-effects regression fit to all of the data confirmed this developmental change in sensitivity ($Test \sim age \cdot condition + (1|subj) + (1|item)$), finding a significant main effect of age ($\beta_{age} = -.43$, $z = -2.75$, $p < .01$), a marginal effect of Plausible Speaker ($\beta_{Plausible} = -1.71$, $z = -1.82$, $p = .07$), and a significant interaction between the two ($\beta_{age \: \cdot \: Plausible} = .54$, $z = 2.58$, $p = .01$). In line with previous work, these results show that 3-year-old children have trouble using top-down speaker expectations when processing ambiguous utterances \cite{kidd2005}. However, children appear to improve significantly over the next two years \cite{rabagliati2013}.
 
 \begin{figure}[tb]
      \centering
@@ -151,7 +153,7 @@ We next turned to the Test trials. When we examined each age group separately we
 
 Older children were thus more sensitive to the speaker's utterances on unambiguous Exposure trials, and relied more on their speaker-expectations on ambiguous Test trials. Did older children rely more on their speaker-expectations because they had built stronger expectations on Exposure trial? If so, individual differences in children's performance on Exposure trials should explain away the effect of age on Test trials. In contrast, if the ability to leverage these expectations is improving over development, age should predict additional variance in ambiguous Test trial responses over and above children's responses on Exposure trials.
 
-To answer this question, we fit an additional model including the proportion of Exposure trials on which individual children had selected the plausible referent. We assume that children who more frequently selected the plausible referent in the Plausible referent in the Plausible Speaker condition, or less frequently selected the plausible referent in the Implausible Speaker condition were encoding more information about the Speaker's plausibility. 
+To answer this question, we fit an additional model including the proportion of Exposure trials on which individual children had selected the plausible referent. We assume that children who more frequently selected the plausible referent in the Plausible referent in the Plausible Speaker condition, or less frequently selected the plausible referent in the Implausible Speaker condition were encoding more information about the Speaker's plausibility ($Test \sim age + condition \cdot Exposure + (1|subj) + (1|item)$. 
 
 This model showed a significant effect of Plausible Speaker ($\beta_{Plausible} = 1.92$, $z = 3.39$, $p = .001$), a significant effect of individual differences in Exposure selection ($\beta_{Exposure} = 2.84$, $z = 4.60$, $p < .001$), and a significant interaction between Plausible Speaker and Exposure selection ($\beta_{Plausible \: \cdot \: Exposure} = -3.32$, $z = -3.64$, $p < .001$), but no effect of age ($\beta_{age} = .06$, $z = .56$, $p = .57$). This was true both when all of the children were analyzed, and when only the 4- and 5- year olds were included in the model. Thus, older children's increased use of speaker expectations on ambiguous Test trials appears to be explained by their stronger encoding of Speaker preferences on the unambiguous Exposure trials.  
 
@@ -193,9 +195,9 @@ In addition, because all of the Test trials asked the listener to select the sem
 
 \subsection{Results}
 
-As in the previous experiments, we first establish that children understood the task, and encoded the differences between the Plausible and Implausible speakers on Exposure trials. At each noise level, children in the Plausible speaker condition were more likely to select the plausible referent on Exposure trials than those in the Implausible speaker condition ($\beta_{No Noise} = 6.92$, $z =6.15$, $p < .001$, $d = 7.94$; $\beta_{Noisy} = 4.91$, $z =8.26$, $p < .001$, $d = 4.46$). Further, children in the Implausible Control condition performed no differently from those in the Implausible condition, licensing comparison of their Test trials ($\beta_{Control} = .35$, $z =.81$, $p = .42$, $d = .21$).
+As in the previous experiments, we first establish that children understood the task, and encoded the differences between the Plausible and Implausible speakers on Exposure trials ($Exposure \sim condition + (1|subj) + (1|item)$). At each noise level, children in the Plausible speaker condition were more likely to select the plausible referent on Exposure trials than those in the Implausible speaker condition ($\beta_{No Noise} = 6.92$, $z =6.15$, $p < .001$, $d = 7.94$; $\beta_{Noisy} = 4.91$, $z =8.26$, $p < .001$, $d = 4.46$). Further, children in the Implausible Control condition performed no differently from those in the Implausible condition, licensing comparison of their Test trials ($\beta_{Control} = .35$, $z =.81$, $p = .42$, $d = .21$).
 
-Second, we again compared the conditions to each other, fitting a mixed-effects regression predicting choice on Exposure trials from noise level and speaker condition (Implausible, Plausible, Control). Compared to the Implausible Speaker condition, children exposed to the Plausible Speaker were more likely to pick the plausible referent on Exposure trials ($\beta_{Plausible} = 6.62$, $z = 8.88$, $p <.001$). Children exposed to the Control speaker did not perform differently on Exposure trials from those exposed to the Implausible speaker, as predicted ($\beta_{Control} = .36$,  $z = .83$, $p = .42$). Further, the model showed a marginal effect of Noise level ($\beta_{Noisy} = .86$,  $z = 1.74$, $p = .08$) and a significant interaction between Noise level and Speaker ($\beta_{Plausible \: \cdot \: Noisy} = -1.71$, $z= -2.15$, $p = .03$), indicating that the addition of noise moved children in both conditions closer to chance.
+Second, we again compared the conditions to each other, fitting a mixed-effects regression predicting choice on Exposure trials from noise level and speaker condition (Implausible, Plausible, Control; $Exposure \sim noise \cdot condition + (1|subj) + (1|item)$). Compared to the Implausible Speaker condition, children exposed to the Plausible Speaker were more likely to pick the plausible referent on Exposure trials ($\beta_{Plausible} = 6.62$, $z = 8.88$, $p <.001$). Children exposed to the Control speaker did not perform differently on Exposure trials from those exposed to the Implausible speaker, as predicted ($\beta_{Control} = .36$,  $z = .83$, $p = .42$). Further, the model showed a marginal effect of Noise level ($\beta_{Noisy} = .86$,  $z = 1.74$, $p = .08$) and a significant interaction between Noise level and Speaker ($\beta_{Plausible \: \cdot \: Noisy} = -1.71$, $z= -2.15$, $p = .03$), indicating that the addition of noise moved children in both conditions closer to chance.
 
 \begin{figure}[tb]
      \centering
@@ -204,18 +206,18 @@ Second, we again compared the conditions to each other, fitting a mixed-effects 
    \label{fig:exp3_results}
 \end{figure}
 
-Did children integrate the noise level of the acoustic stimuli with speaker expectations on the ambiguous Test trials? Figure~\ref{fig:exp3_results} shows the proportion of trials on which children selected the plausible referent at Test in both speaker and noise conditions. As predicted, children showed sensitivity to both speaker reliability and acoustic noise. Children selected the plausible referent at Test, correcting the error in their acoustic input, more often when the speaker had said plausible things on Exposure trials ($\beta_{Noisy} = 1.17$, $z =3.72$, $p < .001$, $d = 1.17$; $\beta_{No Noise} = 1.57$, $z = 4.14$, $p < .001$, $d = 1.17$). In addition, regardless of Speaker plausibility, children selected the plausible referent more frequently when the acoustic input was noisy. To quantify this pattern, we again fit a mixed-effects regression predicting choice on test trials from Speaker type and Noise level as well as their interaction. As predicted, both main effects were significant ($\beta_{Plausible} = 1.96$,  $z = 3.20$, $p <.001$, $\beta_{Noisy} = .81$,  $z = 2.21$, $p = .03$), but their interaction was not ($\beta_{Plausible \: \cdot \: Noisy} = .33$,  $z = .65$, $p = .51$).
+Did children integrate the noise level of the acoustic stimuli with speaker expectations on the ambiguous Test trials? Figure~\ref{fig:exp3_results} shows the proportion of trials on which children selected the plausible referent at Test in both speaker and noise conditions. As predicted, children showed sensitivity to both speaker reliability and acoustic noise. Children selected the plausible referent at Test, correcting the error in their acoustic input, more often when the speaker had said plausible things on Exposure trials ($Test \sim condition + (1|subj) + (1|item)$; $\beta_{Noisy} = 1.17$, $z =3.72$, $p < .001$, $d = 1.17$; $\beta_{No Noise} = 1.57$, $z = 4.14$, $p < .001$, $d = 1.17$). In addition, regardless of Speaker plausibility, children selected the plausible referent more frequently when the acoustic input was noisy. To quantify this pattern, we again fit a mixed-effects regression predicting choice on test trials from Speaker type and Noise level as well as their interaction ($Test \sim condition \cdot noise + (1|subj) + (1|item)$). As predicted, both main effects were significant ($\beta_{Plausible} = 1.96$,  $z = 3.20$, $p <.001$, $\beta_{Noisy} = .81$,  $z = 2.21$, $p = .03$), but their interaction was not ($\beta_{Plausible \: \cdot \: Noisy} = .33$,  $z = .65$, $p = .51$).
 
-Finally, one alternative explanation for the difference between Speaker conditions is that children simply followed their expectations at all times, e.g., that those exposed to the Implausible speaker chose ``silly'' responses regardless of the question. To test this alternative, we asked whether children who responded to an Implausible speaker on Exposure trials always chose the implausible referent on Test trials even when the speaker referred to the \emph{plausible} referent (Implausible Control condition). A mixed-effects model estimating plausible referent selection on Test trials showed that compared to the Plausible speaker, children exposed to the Implausible speaker were less likely to pick the plausible referent ($\beta_{Implausible} = -1.57$,  $z = -4.14$, $p <.001$; $d = 1.17$), but children in the Control condition were \emph{more} likely to select the plausible referent ($\beta_{Control} = 1.06$,  $z = 2.05$, $p = .04$; $d = 1.93$). Thus, children who were asked for the plausible referent at Test selected it, even when the speaker had previously always referred to the implausible referent. This Control condition provides further evidence that children were attending to and responding to the acoustic input from the speaker on Test trials, integrating it with their prior expectations.
+Finally, one alternative explanation for the difference between Speaker conditions is that children simply followed their expectations at all times, e.g., that those exposed to the Implausible speaker chose ``silly'' responses regardless of the question. To test this alternative, we asked whether children who responded to an Implausible speaker on Exposure trials always chose the implausible referent on Test trials even when the speaker referred to the \emph{plausible} referent (Implausible Control condition). A mixed-effects model estimating plausible referent selection on Test trials ($Test \sim condition + (1|subj) + (1|item)$) showed that compared to the Plausible speaker, children exposed to the Implausible speaker were less likely to pick the plausible referent ($\beta_{Implausible} = -1.57$,  $z = -4.14$, $p <.001$; $d = 1.17$), but children in the Control condition were \emph{more} likely to select the plausible referent ($\beta_{Control} = 1.06$,  $z = 2.05$, $p = .04$; $d = 1.93$). Thus, children who were asked for the plausible referent at Test selected it, even when the speaker had previously always referred to the implausible referent. This Control condition provides further evidence that children were attending to and responding to the acoustic input from the speaker on Test trials, integrating it with their prior expectations.
 
 
 \section{General Discussion}
 
-When we use language to communicate, we are doing more than processing the sounds we hear; we are trying to infer speakers' intended meaning \cite{clark1996}. Because perception is inherently uncertain, our expectations about what speakers are likely to say play an important role in resolving interpretive ambiguities \cite{grice1975, frank2012}. Our experiments show that children are able to integrate speaker expectations with perceptual uncertainty by ages 4--5, though perhaps not earlier.
+When we use language to communicate, we are doing more than processing the sounds we hear; we are trying to infer speakers' intended meaning \cite{clark1996}. Because perception is inherently uncertain, our expectations about what speakers are likely to say play an important role in resolving interpretive ambiguities \cite{grice1975, frank2012}. Our experiments show that children are able to integrate speaker expectations with perceptual uncertainty by ages 4--5, though perhaps not earlier. Children's reliance on speaker-expectations appears to track their developing ability to form these expectations, an ability that improves over the preschool years.
 
 In our studies, children adjusted their reliance on expectations as much as adults, but also generally relied more on top-down expectations. Because of the greater noise inherent in children's perceptual processing systems, the same acoustic stimulus may effectively be less reliable for children than adults \cite{neuman1983, lyons2011}. Perhaps children with impaired acoustic processing rely relatively more on their expectations, whereas children with impaired higher-level linguistic expectations rely more on the acoustic signal. Our paradigm could be used to test this prediction.
 
-How much should listeners rely on the acoustic signal and how much should they rely on their expectations? Ideal observer models predict that cue should be weighted in proportion to their reliability \cite{jacobs1999, ernst2002}. This prediction holds for adult listeners across levels in language processing from phonology to syntax \cite<e.g.,>{gibson2013, mcclelland2006}. In our experiments, we cannot say that children's weighting was optimal relative to cue reliability, only that it was adaptive: weighting changed with manipulations of reliability \cite<as in>{gibson2013}. It is a challenge for future work to derive independent measures of reliability for high-level linguistic stimuli. Further, because our participants adapted to only one speaker, we cannot know to what extent this adaptation was speaker-specific vs. speaker-general. However, an attractive feature of the noisy channel framework is that it can be applied hierarchically, with appropriate adaptation predicted at the level of speaker, community, and lexicon as evidence accumulates \cite{kleinschmidt2015}.
+How much \emph{should} listeners rely on the acoustic signal and how much should they rely on their expectations? Ideal observer models predict that cue should be weighted in proportion to their reliability \cite{jacobs1999, ernst2002}. This prediction holds for adult listeners across levels in language processing from phonology to syntax \cite<e.g.,>{gibson2013, mcclelland2006}. In our experiments, we cannot say that children's weighting was optimal relative to cue reliability, only that it was adaptive: weighting changed with manipulations of reliability \cite<as in>{gibson2013}. It is a challenge for future work to derive independent measures of reliability for high-level linguistic stimuli. Further, because our participants adapted to only one speaker, we cannot know to what extent this adaptation was speaker-specific vs. speaker-general. However, an attractive feature of the noisy channel framework is that it can be applied hierarchically, with appropriate adaptation predicted at the level of speaker, community, and lexicon as evidence accumulates \cite{kleinschmidt2015}.
 
 The results of our experiments show that children, like adults, flexibly trade off between information sources in language comprehension in response to their reliability. Noisy channel principles thus provide a framework for understanding language processing in both adults and children.
 
